--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,8 +40,8 @@ jobs:
     - name: Run generate-domains-blocklist.py
       run: |
         cd blocked-names
-        python generate-domains-blocklist.py -o blocked-names.txt 
-        mv blocked-names.txt ./
+        python generate-domains-blocklist.py -o ../blocked-names.txt 
+
 
     - name: Sync Packages
       run: |
